@@ -1,4 +1,5 @@
 TODO
+* remove libevtx_libfguid.h once libfvalue wraps the format flags
 * libfvalue:
   - improve to value to string type support
 * libevtx:
@@ -21,6 +22,9 @@ TODO
 
 Recovery:
 * scan for records in chunk free space
+
+20120418
+* worked on libfvalue - format passing
 
 20120417
 * added libexe, libregf, libwrc, libcdirectory
